backend/tests/corpus/shadowing-neg-012.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedRepos
metadata:
  labels:
    cape-test-case: shadowing-neg-012
    owner-team: team-beta
  name: img-policy-clean-shadowing-neg-012
spec:
  match:
    kinds:
    - apiGroups:
      - ''
      kinds:
      - Pod
    namespaces:
    - shadow-ns-shadowing-neg-012-0
    - shadow-ns-shadowing-neg-012-1
    - shadow-ns-shadowing-neg-012-2
  parameters:
    repos:
    - mycompany.com/
